--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,14 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=django
 
 ### Django ###
-*.log
-*.pot
-*.pyc
-__pycache__/
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-media
+# *.log
+# *.pot
+# *.pyc
+# __pycache__/
+# local_settings.py
+# db.sqlite3
+# db.sqlite3-journal
+# media
 
 **/migrations/*
 !**/migrations/__init__.py
