--- a/.gitignore
+++ b/.gitignore
@@ -2,19 +2,19 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=django
 
 ### Django ###
-# *.log
-# *.pot
-# *.pyc
-# __pycache__/
-# local_settings.py
-# db.sqlite3
-# db.sqlite3-journal
-# media
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+media
 
-# **/migrations/*
-# !**/migrations/__init__.py
+**/migrations/*
+!**/migrations/__init__.py
 
-# __pycache__/
+__pycache__/
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
